# event_generation

./: .gitignore  LICENSE  README.md  bot.py  config.py  main.py  openai_client.py  pyproject.toml  requirements.txt
